<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FinishPage">

    <TextView
        android:id="@+id/congratsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="235dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/scoreLabelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/score_label"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/congratsText" />

    <TextView
        android:id="@+id/correctText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scoreLabelText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/newQuizBtn"
        android:layout_width="242dp"
        android:layout_height="71dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/standard_btn"
        android:text="@string/new_quiz"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/correctText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/finishBtn"
        android:layout_width="242dp"
        android:layout_height="71dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/standard_btn"
        android:text="@string/finish"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newQuizBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>